--- a/src/components/layout/Header.module.css
+++ b/src/components/layout/Header.module.css
@@ -1,4 +1,4 @@
-@import url(https://allfont.net/allfont.css?fonts=star-jedi);
+@import url('https://allfont.net/allfont.css?fonts=star-jedi');
 
 .header {
     width: 100%;
