--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Narrow&display=swap');
+@import url('https://allfont.net/allfont.css?fonts=star-jedi');
 
 .section {
     margin: 0 auto;
